@@ -270,11 +270,11 @@ what form field to use (function <cite>twill.commands.browser.get_form_field</ci
 search current form for control name with exact match to fieldname;
 if single (unique) match, select.
 
-if no match, search current form for control name with regexp match to fieldname;
-if single (unique) match, select.
-
 if no match, convert fieldname into a number and use as an index, if
 possible.
+
+if no match, search current form for control name with regexp match to fieldname;
+if single (unique) match, select.
 
 if *still* no match, look for exact matches to submit-button values.
 if single (unique) match, select.
@@ -579,7 +579,6 @@ functionality that can be directly applied to twill.</li>
 <p>0.8 release:</p>
 <blockquote>
 <ol class="arabic simple">
-<li>test the documented fieldname spec for fv/submit.</li>
 <li>HTTP-EQUIV refresh/redirect commands w/in mechanize? (issola.caltech.edu/~t/transfer/redir-test.html)</li>
 <li>Test HTTP basic auth &amp; basic auth (<a class="reference" href="http://www.quixote.ca/qx/HttpBasicAuthentication">http://www.quixote.ca/qx/HttpBasicAuthentication</a>?) example.</li>
 </ol>
