@@ -1,5 +1,8 @@
 2005-11-27  Titus Brown  <t@issola.caltech.edu>
 
+	* Added in a bunch of form tests to test-form, fixed bugs discovered
+	  thereby.
+
 	* Added in sureshvv's formaction/fa patch.
 
 	* Added in docs re 'tidy'.
